- Query method argumentsInvalid() renamed; from parameterTypesCheck().
- MsSql doesn't need support for more type chars (t ~ datetime, n ~ nvarchar),
  because Sqlsrv handles DateTime transparently (stringifying when for varchar)
  and nvarchar may be handled with type qualifying argument array (only needed
  when the parameter is to be used in a sql where clause, anyway).

SimpleComplex/Database 1.x, 2018-07-29
--------------------------------------
- MariaDbClient secure databaseInfo flags now that parent DbClient passes all
  non-standard databaseInfo buckets to options.
- DbQuery option sql_minify, and method to match it.
- MsSql affected_rows goes to first result set initially,
  but doesn't move to next.

SimpleComplex/Database 1.x, 2018-07-27
--------------------------------------
- MsSql client: remove redundant phrase from native error messages;
  [Microsoft][ODBC ...].

SimpleComplex/Database 1.x, 2018-07-22
--------------------------------------
- Methods messagePrefix() renamed; from errorMessagePrefix().
- DbClient constant DATABASE_INFO_REQUIRED replaced by DATABASE_INFO.
- DbClient support options passed in root of arg databaseInfo; as well as
  options passed in options bucket.
- MsSql client default to use ISO quoted identifier, and support shorthand
  option.

SimpleComplex/Database 1.x, 2018-06-30
--------------------------------------
- Minor test fixes; requires Utils >=1.7.2.

SimpleComplex/Database 1.x, 2018-05-21
--------------------------------------
- Tests use helpers of the Utils package.
- Release 0.9.3.

SimpleComplex/Database 1.x, 2018-05-12
--------------------------------------
- result mode renamed; from cursor mode.
- Query generic options allowed vs. specific options supported;
  and detect query option name misspelling.
- MariaDb auto-detect multi-query.
- Calling MariaDB/MySQL stored procedure _is_ possible with prepared statement
  as well as single simple query.